--- a/elements/crew-team-manager-erg/crew-team-manager-erg-detail-results.html
+++ b/elements/crew-team-manager-erg/crew-team-manager-erg-detail-results.html
@@ -7,7 +7,7 @@
 
 <link rel="import" href="../crew-team-manager-avatar/crew-team-manager-avatar.html">
 
-<dom-module id="crew-team-manager-schedule-detail-results">
+<dom-module id="crew-team-manager-erg-detail-results">
     <template>
         <style>
              :host {
@@ -27,13 +27,13 @@
                 @apply(--layout-flex);
             }
 
-            #regatta-avatar {
+            #erg-avatar {
                 @apply(--layout-horizontal);
                 @apply(--layout-center-justified);
                 margin: 8px;
             }
 
-            #regatta-name {
+            #erg-number {
                 font-size: 24px;
                 text-align: Center;
                 font-style: bold;
@@ -45,17 +45,12 @@
                 font-weight: bold;
             }
 
-            #regatta-location {
+            #erg-location {
                 border-bottom: solid 1px grey;
                 padding: 16px;
             }
 
-            #regatta-image {
-                border-bottom: solid 1px grey;
-                padding: 16px;
-            }
-
-            #regatta-cost {
+            #erg-details {
                 border-bottom: solid 1px grey;
                 padding: 16px;
             }
@@ -63,30 +58,31 @@
 
         <div id="content">
 
-            <paper-card id="regatta">
-                <crew-team-manager-avatar id="regatta-avatar" value="[[data.name]]" large></crew-team-manager-avatar>
-                <div id="regatta-name">
-                    [[data.name]]
+            <paper-card id="erg">
+                <crew-team-manager-avatar id="erg-avatar" large></crew-team-manager-avatar>
+                <div id="erg-number">
+                    [[data.number]]
                 </div>
-                <div id="regatta-location">
+                <div id="erg-location">
                     <div id="subhead">
                         Location:
                     </div>
                     <div id="location">
-                        [[data.streetAddress]], [[data.city]], [[data.state]]
+                        [[data.location]]
                     </div>
                 </div>
-                <div id="regatta-image">
-                    <div id="image">
-                        <irom-image src="[[data.locationImage]]"></irom-image>
-                    </div>
-                </div>
-                <div id="regatta-cost">
+                <div id="erg-details">
                     <div id="subhead">
-                        Financial:
+                        Details:
                     </div>
-                    <div id="funds">
-                        Cost: $[[data.cost]]
+                    <div id="model">
+                        Model: [[data.model]]
+                    </div>
+                    <div id="scareen-type">
+                        Screen Type: [[data.condition]]
+                    </div>
+                    <div id="condition">
+                        Condition: [[data.condition]]
                     </div>
                 </div>
 
@@ -96,10 +92,10 @@
 
     <script>
         // Extend Polymer.Element with MyMixin
-        class crewTeamManagerScheduleDetailResults extends Polymer.Element {
+        class crewTeamManagerErgDetailResults extends Polymer.Element {
 
             static get is() {
-                return 'crew-team-manager-schedule-detail-results'
+                return 'crew-team-manager-erg-detail-results'
             }
 
             static get properties() {
@@ -112,6 +108,6 @@
         }
 
         // Register custom element definition using standard platform API
-        customElements.define(crewTeamManagerScheduleDetailResults.is, crewTeamManagerScheduleDetailResults);
+        customElements.define(crewTeamManagerErgDetailResults.is, crewTeamManagerErgDetailResults);
     </script>
 </dom-module>
